...

  return (
    <TodoEditingProvider
      onTodoUpdated={updateTodoInView}
      todoStates={todoStates}
    >
      <ScreenContainer testID="agendaScreen">
        <AgendaHeader
          dateLabel={dateLabel}
          isToday={isToday}
          showCompleted={showCompleted}
          viewMode={viewMode}
          refreshing={refreshing}
...
